fix: sidenav spacing
* Adds some spacing in the sidenav so the new button shapes aren't all the way to the edges.
* Fixes that it was hard to scroll some of the bottom sidenav links into view.

--- a/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
@@ -37,9 +37,10 @@ app-component-sidenav {
 
   .docs-component-viewer-nav-content {
     width: constants.$sidenav-width;
-    padding: 16px 0;
-    height: calc(100vh - 56px);
+    padding: 16px 8px;
+    height: calc(100vh - 75px);
     overflow: auto;
+    box-sizing: border-box;
 
     &::-webkit-scrollbar {
       height: 4px;
